# PactMsg-LegacyC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pactmsg.sln
pactmsg/: connection.c  connection.h  connection_structs.h  connection_typedefs.h  crosssocket.c  crosssockets.h  data.c  data.h  data_structs.h  data_typedefs.h  datastructures.c  datastructures.h  debug.h  linkedlist.h  pactmsg.vcxproj  pactmsg.vcxproj.filters  pstring.c  pstring.h
pactref/: main.c  pactref.vcxproj  pactref.vcxproj.filters
src/: client.c  client.h  config.h  connection.c  connection.h  connection_structs.h  crosssocket.c  ircconnection.c  ircconnection.h  linkedlist.c  linkedlist.h  pactmsg.h  pstring.c  pstring.h  refconnection.c  refconnection.h
src/pactref/: main.c
src/tester/: main.c
src/tests/integration/: main.c
src/tests/unit/: main.c  test_pstring.c
tester/: main.c  tester.vcxproj
